--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -13,9 +13,9 @@ name: Semgrep
 on:
   push:
     branches: [ "main" ]
-  pull_request:
+  # pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "main" ]
+    # branches: [ "main" ]
   schedule:
     - cron: '30 15 * * 5'
 
